--- a/ClientApp/components/SongResultsHeader/SongResultsHeader.vue.html
+++ b/ClientApp/components/SongResultsHeader/SongResultsHeader.vue.html
@@ -1,23 +1,29 @@
 <template>
-    <h1>
+    <h2>
         <template v-if="songs">
             <template v-if="isAll">
                 All {{ songs ? songs.length : '' }}
                 {{ (songs ? songs.length : '') | pluralize('Song', 'Songs') }}
+            
                 <template v-if="searchParameters && searchParameters.text && searchParameters.text.length">
-
+                    Matching '<em>{{ searchParameters.text }}</em>'
                 </template>
             </template>
-            <template v-else-if="isTags">
-                All {{ songs ? songs.length : '' }}
-                {{ (songs ? songs.length : '') | pluralize('Song', 'Songs') }}
 
+            <template v-else-if="isTags">
+                {{ songs ? songs.length : '' }}
+                {{ (songs ? songs.length : '') | pluralize('Song', 'Songs') }} Tagged with '<em>{{ tag }}</em>'
+            </template>
+            
+            <template v-else>
+                {{ songs ? songs.length : '' }}
+                {{ (songs ? songs.length : '') | pluralize('Song', 'Songs') }} [unhandled search scenario in header]
             </template>
         </template>
         <template v-else>
             Please Wait...
         </template>
-    </h1>
+    </h2>
 </template>
 
 <style src="./SongResultsHeader.css" ></style>
