--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,20 +1,24 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - OpenSongWeb</title>
     <base href="~/" />
 
-    <link rel="stylesheet" href="~/dist/vendor.css" asp-append-version="true" />
-    <environment exclude="Development">
-        <link rel="stylesheet" href="~/dist/site.css" asp-append-version="true" />
+    <environment include="Development">
+        <link rel="stylesheet" href="~/dist/css/vendor/main.css" asp-append-version="true" />
     </environment>
+    <environment exclude="Development">
+        <link rel="stylesheet" href="~/dist/css/vendor/main.css" asp-append-version="true" />
+    </environment>
+
+    @RenderSection("styles", required: false)
 </head>
 <body>
     @RenderBody()
 
-    <script src="~/dist/vendor.js" asp-append-version="true"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
